SG-1864 -- Fixed alignment of news and events subheaders and main content.

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-event.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-event.scss
@@ -79,6 +79,11 @@
     position: relative;
     margin-bottom: 100px;
   }
+
+  .event--content-container .responsive-container {
+    @include contain-1090;
+  }
+
   .event--content-container-inner {
     @include contain;
     @include clearfix;
@@ -200,15 +205,6 @@
 
   .event--meta.no-image {
     .event--meta-inner {
-      margin: 0 auto;
-      max-width: 1276px;
-      padding-left: 20px;
-      padding-right: 20px;
-
-      @include media($medium-screen) {
-        padding-left: 96px;
-        padding-right: 96px;
-      }
     }
   }
 
