--- a/web/themes/custom/sfgovpl/src/sass/node/_node-news.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-news.scss
@@ -7,6 +7,10 @@
     @include fs-body-bold;
   }
 
+  .news--body .responsive-container {
+    @include contain-1090;
+  }
+
   // these definitions is for the markup generated by the wysiwyg textarea
   .news--body {
     h2 {
